# rs3buddy-clients

./: CONTRACT.md  README.md  developer-guide.md
docs/: advanced.md  examples.md  glossary.md  html-overlay.md  overview.md  troubleshooting.md
java/: README.md  build.gradle  settings.gradle
java/examples/: Hud.java  ReadChat.java
java/src/main/java/com/rs3buddy/: RS3Buddy.java  RS3BuddyConnectionException.java  RS3BuddyException.java  SmokeLive.java  SpriteNames.java  Transport.java
java/src/main/java/com/rs3buddy/models/: AbilitiesReadResult.java  AbilityRect.java  AbilitySlot.java  AnimationSpec.java  Attribute.java  Bar.java  BarValue.java  BarsReadResult.java  Buff.java  BuffRect.java  (+46 more)
java/src/test/java/com/rs3buddy/: CoverageTest.java  RS3BuddyTest.java  TransportTest.java
lua/: .gitignore  .luarc.json  README.md
lua/examples/: hud.luau  read_chat.luau
lua/rs3buddy/: client.luau  client_test.luau  coverage_test.luau  init.luau  json.luau  smoke_live.luau  sprite_names.luau  transport.luau  transport_test.luau  types.luacats.lua  types.luau
python/: .gitignore  README.md  pyproject.toml  smoke_live.py
python/examples/: hud.py  read_chat.py
python/rs3buddy/: __init__.py  client.py  errors.py  models.py  sprite_names.py  transport.py
python/tests/: test_client.py  test_coverage.py  test_transport.py
ts/: README.md  package.json  tsconfig.json
ts/examples/: hud.ts  read_chat.ts
ts/src/: client.ts  errors.ts  index.ts  models.ts  spriteNames.ts  transport.ts
ts/test/: client.test.mjs  coverage.test.mjs  smoke.live.mjs  transport.test.mjs
