[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rs3buddy"
version = "0.1.1"
description = "rs3buddy HTTP client (Python) — typed wrapper over the rs3buddy server."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["rs3buddy"]

[tool.setuptools.package-data]
rs3buddy = ["py.typed"]
